--- a/src/ivy.xml
+++ b/src/ivy.xml
@@ -1,30 +1,37 @@
 <ivy-module version="2.0">
     <info organisation="com.home" module="camel"/>
+    <property name="ivy.checksums" value=""/>
     <dependencies>
 
 
-    	<dependency org="org.springframework" name="spring-context" rev="4.2.0.RELEASE"/>
-		<dependency org="org.springframework" name="spring-core" rev="4.2.0.RELEASE"/>
+		<!-- Spring dependencies -->
+    	<dependency org="org.springframework" name="spring-context" rev="4.2.5.RELEASE"/>
+		<dependency org="org.springframework" name="spring-core" rev="4.2.5.RELEASE"/>
+		
+		<!-- Spring Jdbc dependencies
 		<dependency org="org.springframework" name="spring-jdbc" rev="4.2.0.RELEASE"/>
 		<dependency org="mysql" name="mysql-connector-java" rev="5.1.36"/>
+		-->
 		
+		<!-- CXF dependencies
 		<dependency org="org.apache.cxf" name="cxf-rt-frontend-jaxws" rev="3.1.5"/>
 		<dependency org="org.apache.cxf" name="cxf-tools-common" rev="3.1.5"/>
 		<dependency org="org.apache.cxf" name="cxf-tools-wsdlto-core" rev="3.1.5"/>
 		<dependency org="org.apache.cxf" name="cxf-tools-wsdlto-frontend-jaxws" rev="3.1.5"/>
-		<dependency org="org.apache.cxf" name="cxf-tools-wsdlto-databinding-jaxb" rev="3.1.5">
+		<dependency org="org.apache.cxf" name="cxf-tools-wsdlto-databinding-jaxb" rev="3.1.5"/>
+		-->
+		
+		<!-- Slf4j dependencies -->
+		<dependency org="org.slf4j" name="slf4j-api" rev="1.7.21"/>
+		<dependency org="ch.qos.logback" name="logback-classic" rev="1.1.7"/>
 		
 		
-		
-		
-		<exclude type="source"/>
-		<exclude type="javadoc"/>
-		
-		</dependency>
-		
-		<dependency org="org.slf4j" name="slf4j-api" rev="1.7.18"/>
-		<dependency org="ch.qos.logback" name="logback-classic" rev="1.1.6"/>
+		<!-- Camel dependencies -->
 		<dependency org="org.apache.camel" name="camel-core" rev="2.17.0"/>
+		<dependency org="org.apache.camel" name="camel-jms" rev="2.17.0"/>
+		<dependency org="org.apache.activemq" name="activemq-core" rev="5.7.0">
+			<exclude module="groovy-all"/>
+		</dependency>
 		
 	<exclude org="*" ext="*" type="source"/>
 	<exclude org="*" ext="*" type="javadoc"/>
